--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,54 @@
 alembic==1.14.0
+argcomplete==3.5.3
 bcrypt==4.2.1
 blinker==1.9.0
+boto3==1.36.10
+botocore==1.36.10
+certifi==2025.1.31
 cffi==1.17.1
+cfn-flip==1.3.0
+charset-normalizer==3.4.1
 click==8.1.8
 cryptography==44.0.0
+durationpy==0.9
 ecdsa==0.19.0
 Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+hjson==3.1.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
+jmespath==1.0.1
+kappa==0.6.0
 Mako==1.3.8
 MarkupSafe==3.0.2
 passlib==1.7.4
+placebo==0.9.0
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
+python-slugify==8.0.4
 pytz==2024.2
+PyYAML==6.0.2
+requests==2.32.3
 rsa==4.9
+s3transfer==0.11.2
+setuptools==75.8.0
 six==1.17.0
 SQLAlchemy==2.0.37
+text-unidecode==1.3
+toml==0.10.2
+tqdm==4.67.1
+troposphere==4.9.0
 typing_extensions==4.12.2
+urllib3==2.3.0
 Werkzeug==3.1.3
+wheel==0.45.1
+zappa==0.59.0
